[tool.poetry]
name = "lua-version-manager"
version = "0.1.0"
description = ""
authors = ["Yakumo-zi <1477717283@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
